# rusync

./: .gitignore  Cargo.toml  README.md
src/: fsops.rs
tests/: integration_test.rs
