[package]
name = "rusync"
version = "0.7.0"
authors = ["Dimitri Merejkowsky <d.merej@gmail.com>", "Ahmed Masud <ahmed.masud@saf.ai"]

readme = "README.md"
description = "Minimalist rsync clone in Rust"
license = "BSD-3-Clause"

keywords = ["rsync"]
categories = ["command-line-utilities"]

repository = "https://github.com/dmerejkowsky/rusync"

edition = "2018"

[lib]
name = "rusync"
path = "src/lib.rs"

[[bin]]
name = "rusync"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.36"
colored = "2.0.0"
filetime = "0.2.15"
humansize = "1.1.0"
humantime = "2.0.1"
pathdiff = "0.2.1"
structopt = "0.3.25"
term_size = "0.3"

[dev-dependencies]
tempdir = "0.3"
